fix: align animation duration with tag

--- a/src/components/sbb-tab-title/sbb-tab-title.scss
+++ b/src/components/sbb-tab-title/sbb-tab-title.scss
@@ -17,7 +17,7 @@
   --sbb-tab-title-inset: 0;
   --sbb-tab-title-gap: var(--sbb-spacing-fixed-2x);
   --sbb-tab-title-text-decoration: none;
-  --sbb-tab-title-animation-duration: var(--sbb-animation-duration-4x);
+  --sbb-tab-title-animation-duration: var(--sbb-animation-duration-2x);
   --sbb-tab-title-animation-easing: var(--sbb-animation-easing);
   --sbb-tab-title-amount-color: var(--sbb-color-metal-default);
 
